<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/textView"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayoutUsuario"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:padding="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="@string/ayudaUsuario"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="@string/content_description_start_icon"
                app:startIconDrawable="@drawable/id_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayoutPassword"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:helperText="@string/ayudaPassword"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLayoutUsuario"
                app:startIconContentDescription="@string/content_description_start_icon2"
                app:startIconDrawable="@drawable/ic_password_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/botonRegistro"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registro"
                app:layout_constraintEnd_toEndOf="@id/textLayoutPassword"
                app:layout_constraintTop_toBottomOf="@id/textLayoutPassword" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_theme_light_surfaceVariant"
                android:scrollbars="vertical"
                android:text="Gracias por probar la aplicación"
                android:textColorLink="@color/link_color"
                app:layout_constraintTop_toBottomOf="@id/botonRegistro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/md_theme_light_surfaceVariant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.Material3.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom"
        app:hideOnScroll="true"
        app:menu="@menu/bottom_app_bar_menu" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/extendedFab"
        app:icon="@drawable/ic_usuarios_24"
        app:layout_anchor="@id/bottomAppBar" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>